Fix spacing on interview process

--- a/app/assets/stylesheets/find/application.scss
+++ b/app/assets/stylesheets/find/application.scss
@@ -49,3 +49,7 @@
   background-color: #f3f2f1;
   border-left: 5px solid #4c2c92;
 }
+
+.app-inset-no-margin {
+  margin-top: 0;
+}
